update form design

--- a/apps/web/lib/web/templates/layout/root.html.heex
+++ b/apps/web/lib/web/templates/layout/root.html.heex
@@ -9,12 +9,14 @@
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
-  <body>
+  <body >
     <header>
       <section>
         <h1 class="font-medium text-center leading-tight text-5xl my-4"> Welcome to the People Database </h1>
       </section>
     </header>
-    <%= @inner_content %>
+    <div class="mx-20 container">
+      <%= @inner_content %>
+    </div>
   </body>
 </html>
